hlsfdc/main/default/objects/HLCall__c/HLCall__c.object-meta.xml
<CustomObject>
    <changeDataCaptureSettings>
    </changeDataCaptureSettings>
    <label>HLCall</label>
    <nameField>
        <label>HLCall Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HLCalls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>