hlsfdc/main/default/objects/HLCall__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>HLCalls</relationshipLabel>
    <relationshipName>HLCalls</relationshipName>
    <type>Lookup</type>
</CustomField>