hlsfdc/main/default/objects/HLCall__c/fields/HLCall_Id__c.field-meta.xml
<CustomField>
    <fullName>HLCall_Id__c</fullName>
    <description>The ID of this call in Help Lightning relative to the session_id</description>
    <label>HLCall Id</label>
    <type>TextArea</type>
</CustomField>