hlsfdc/main/default/objects/HLCall__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>