hlsfdc/main/default/objects/HLCall__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>When the call started.</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>