hlsfdc/main/default/objects/HLCall__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>HLCalls</relationshipLabel>
    <relationshipName>HLCalls</relationshipName>
    <type>Lookup</type>
</CustomField>